<resources>
    <string name="app_name">AlkemyMovieChallenge</string>
    <string name="movie">a movie</string>
    <string name="btn_close">close</string>
    <string name="movie_overview">overview</string>
    <string name="textview">text view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="it_seems_we_don_t_have_this_movie">It seems we don\'t have this movie. Please try another one!</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="search">Search</string>
    <string name="name">by Jeff Amady</string>
    <string name="made_with">Made with</string>
    <string name="rate_this_movie">Rate this movie</string>
</resources>