<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15222E"
    tools:context=".presentation.view.MovieDetailsActivity">


    <ImageView
        android:id="@+id/ivBackdrop"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvOverview"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="280dp"
            android:contentDescription="@string/app_name"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#003A3D4C"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn_close"
        android:elevation="4dp"
        android:hapticFeedbackEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/cv"
        app:layout_constraintTop_toTopOf="@+id/cv"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


    <TextView
        android:id="@+id/tvAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:elevation="4dp"
        android:shadowColor="#CA2C2C"
        android:text="@string/app_name"
        android:textColor="#95FF5722"
        app:layout_constraintEnd_toEndOf="@+id/cv"
        app:layout_constraintStart_toStartOf="@+id/cv"
        app:layout_constraintTop_toBottomOf="@+id/cv" />




    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="195dp"
        app:layout_constraintHeight_min="150dp"
        app:layout_constraintHeight_max="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        tools:text="@string/movie_overview"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackdrop"
        tools:layout_editor_absoluteY="267dp" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="@string/textview"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="@+id/tvOverview"
        app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

    <TextView
        android:id="@+id/tvPopularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="@string/textview"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/tvOverview"
        app:layout_constraintTop_toBottomOf="@+id/tvOverview" />


</androidx.constraintlayout.widget.ConstraintLayout>
